kubernetes/apps/external/plex/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 32400
