kubernetes/apps/external/plex/app/plex-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: &host "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: default
subsets:
  - addresses:
      - ip: ${PLEX_IP}
    ports:
      - name: http
        port: 32400
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 32400
